# ai-english-tutor

./: .gitignore  CHANGELOG.md  DEPLOY.md  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pyrightconfig.json  tailwind.config.js  tsconfig.json  tsconfig.test.json  vitest.config.ts
.moai/: manifest.json
backend/: .env.example  Procfile  README.md  nixpacks.toml  pyproject.toml  pyrightconfig.json  railway.toml  requirements.txt
backend/.moai/plans/: sprightly-tickling-sutton.md
backend/src/tutor/: __init__.py  config.py  graph.py  main.py  prompts.py  schemas.py  state.py
backend/src/tutor/agents/: __init__.py  aggregator.py  grammar.py  image_processor.py  reading.py  supervisor.py  vocabulary.py
backend/src/tutor/models/: __init__.py  llm.py
backend/src/tutor/prompts/: grammar.md  level_instructions.yaml  reading.md  supervisor.md  vocabulary.md
backend/src/tutor/routers/: __init__.py  tutor.py
backend/src/tutor/services/: __init__.py  image.py  session.py  streaming.py
backend/src/tutor/utils/: markdown_normalizer.py
backend/tests/: __init__.py  conftest.py  test_scaffolding.py
backend/tests/fixtures/: __init__.py
backend/tests/integration/: __init__.py  test_api.py
backend/tests/unit/: test_agents.py  test_config.py  test_graph.py  test_llm.py  test_markdown_normalizer.py  test_prompts.py  test_prompts_integration.py  test_schemas.py  test_services.py  test_state.py
coverage/: coverage-final.json  index.html
my-prompt/: grammar-prompt.md  reading-prompt.md  vocabulary-prompt.md
(+153 files in other folders)
