[project]
name = "ai-english-tutor"
version = "0.1.0"
description = "AI-based personalized English learning tutor backend system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "langgraph>=0.3.0,<0.4.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "python-multipart>=0.0.20",
    "pillow>=11.0.0,<12.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.25.0,<0.26.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.28.0,<0.29.0",
    "ruff>=0.9.0,<1.0.0",
    "tomli>=2.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src/tutor --cov-report=term-missing --cov-report=html"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/tutor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
